finish formatting quiz questions

--- a/src/components/quiz/Quiz.css
+++ b/src/components/quiz/Quiz.css
@@ -1,5 +1,5 @@
 .quizContainer {
-  margin: 40px auto 0 auto;
+  margin: 40px auto;
   padding: 40px 0;
   width: 90%;
   box-shadow: 4px 4px 6px #333;
